[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameHUDRelated/Tooltips/BaseTooltip.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/chivo/chivo.regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/TooltipStandard/Assets/WhiteLine_3x3.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/TooltipStandard/Assets/GrayLine_3x3.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=5]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/TooltipStandard/TooltipStandard.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="TooltipStandard" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Header" type="MarginContainer" parent="VBoxContainer" index="0"]
margin_right = 40.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 20 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background" type="TextureRect" parent="VBoxContainer/Header" index="0"]
margin_right = 40.0
margin_bottom = 30.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Left" type="TextureRect" parent="VBoxContainer/Header" index="1"]
margin_right = 3.0
margin_bottom = 30.0
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Right" type="TextureRect" parent="VBoxContainer/Header" index="2"]
margin_left = 37.0
margin_right = 40.0
margin_bottom = 30.0
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Top" type="TextureRect" parent="VBoxContainer/Header" index="3"]
margin_right = 40.0
margin_bottom = 3.0
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Bottom" type="TextureRect" parent="VBoxContainer/Header" index="4"]
margin_top = 27.0
margin_right = 40.0
margin_bottom = 30.0
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="HeaderContainer" type="MarginContainer" parent="VBoxContainer/Header" index="5"]
margin_right = 40.0
margin_bottom = 30.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HeaderLabel" type="Label" parent="VBoxContainer/Header/HeaderContainer" index="0"]
margin_left = 5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="Body" type="MarginContainer" parent="VBoxContainer" index="1"]
margin_top = 30.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background2" type="TextureRect" parent="VBoxContainer/Body" index="0"]
margin_right = 40.0
margin_bottom = 10.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Left2" type="TextureRect" parent="VBoxContainer/Body" index="1"]
margin_right = 3.0
margin_bottom = 10.0
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Right2" type="TextureRect" parent="VBoxContainer/Body" index="2"]
margin_left = 37.0
margin_right = 40.0
margin_bottom = 10.0
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Bottom2" type="TextureRect" parent="VBoxContainer/Body" index="3"]
margin_top = 7.0
margin_right = 40.0
margin_bottom = 10.0
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BodyContainer" type="MarginContainer" parent="VBoxContainer/Body" index="4"]
margin_right = 40.0
margin_bottom = 10.0
custom_constants/margin_right = 5
custom_constants/margin_top = 2
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="TooltipBody" parent="VBoxContainer/Body/BodyContainer" index="0" instance=ExtResource( 5 )]
margin_left = 5.0
margin_top = 2.0
margin_right = 35.0
margin_bottom = 5.0
default_font_color = Color( 1, 1, 1, 1 )
default_font_size = 16
